links added and admin panel css moved

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -111,7 +111,7 @@
               <div class="contact-content">
                 <p class="email mb-1 fw-bold">Email</p>
                 <p class="reach-out mb-1">Kindly Reach Out</p>
-                <a href="#" class="address">1234 Street, City, Country</a>
+                <a href="info@welihealthcare.comm" class="address">info@welihealthcare.com</a>
               </div>
             </div>
           </div>
@@ -129,7 +129,7 @@
               </div>
               <p class="location fw-bold">Location</p>
               <p>Our physical location</p>
-              <p>Stephen Howard court, Missouri city TX 77</p>
+              <p>3700 Stephen Howard court, Missouri city Texas 77459</p>
             </div>
           </div>
 
@@ -143,7 +143,7 @@
               </div>
               <p class="phone fw-bold">Phone</p>
               <p>Reah out through phone call</p>
-              <p>+234 453 545 4344</p>
+              <a href="+13462191008">+13462191008</a>
             </div>
           </div>
         </div>
@@ -209,7 +209,7 @@
           data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
           data-aos-duration="1000">
             <img
-              src="/assets/images/contact.png"
+              src="/assets/images/profile-img.jpg"
               alt="Contact Us Image"
               class="img-fluid"
             />
@@ -253,6 +253,7 @@
       </div>
     </div>
 
+    
     <!-- Footer Section---- -->
     <footer class="footer-section" data-aos="fade-down"
     data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
@@ -285,15 +286,15 @@
           <div class="col-md-12 mb-3">
             <div class="contact-item">
               <i class="fas fa-envelope"></i>
-              <a href="mailto:info@wealthliving.com" class="text-white"
-                >info@wealthliving.com</a
+              <a href="info@welihealthcare.comm" class="text-white"
+                >info@welihealthcare.com</a
               >
             </div>
           </div>
           <div class="col-md-6">
             <div class="contact-item">
               <i class="fas fa-phone-alt"></i>
-              <a href="tel:+1234567890" class="text-white">+1 234 567 890</a>
+              <a href="+13462191008" class="text-white">+13462191008</a>
             </div>
           </div>
         </div>
@@ -303,15 +304,16 @@
           <div class="col-md-6 text-start">
             <div class="address">
               <i class="fas fa-map-marker-alt"></i>
-              <p>123 Health Street, Wellness City, USA</p>
+              <p>3007 Stephen Howard court,
+                Missouri city TX 77459</p>
             </div>
           </div>
           <div class="col-md-6 text-md-end text-center">
             <div class="social-icons">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://www.facebook.com/share/1A7nFQeMjf/"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://Wa.me/13462191008"><i class='bx bxl-whatsapp'></i></a>
+              <a href="https://www.instagram.com/wealthy_living_healthcare?igsh=dnJobXlpam1iZWMz"><i class="fab fa-instagram"></i></a>
+              <a href="http://tiktok.com/@wealthyliving.hea"><i class='bx bxl-tiktok' ></i></a>
             </div>
           </div>
         </div>
