--- a/pages/login.html
+++ b/pages/login.html
@@ -79,7 +79,7 @@
 
               <!-- Remember Me & Forgot Password -->
               <div class="remember-me mb-3 d-flex">
-                <div>
+                <div class="me-2">
                   <input type="checkbox" id="remember" />
                   <label for="remember">Remember Me</label>
                 </div>
