--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -106,9 +106,10 @@
         data-aos-duration="1000">
             <h5 class="text-primary">Blog > Healthcare</h5>
             <div class="blogs-social-icons">
-                <a href="#" class="me-3"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="me-3"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://www.facebook.com/share/1A7nFQeMjf/"><i class='bx bxl-facebook'></i></a>
+              <a href="https://Wa.me/13462191008"><i class='bx bxl-whatsapp'></i></a>
+              <a href="https://www.instagram.com/wealthy_living_healthcare?igsh=dnJobXlpam1iZWMz"><i class="fab fa-instagram"></i></a>
+              <a href="http://tiktok.com/@wealthyliving.hea"><i class='bx bxl-tiktok' ></i></a>
             </div>
         </div>
 
@@ -318,15 +319,15 @@
           <div class="col-md-12 mb-3">
             <div class="contact-item">
               <i class="fas fa-envelope"></i>
-              <a href="mailto:info@wealthliving.com" class="text-white"
-                >info@wealthliving.com</a
+              <a href="info@welihealthcare.comm" class="text-white"
+                >info@welihealthcare.com</a
               >
             </div>
           </div>
           <div class="col-md-6">
             <div class="contact-item">
               <i class="fas fa-phone-alt"></i>
-              <a href="tel:+1234567890" class="text-white">+1 234 567 890</a>
+              <a href="+13462191008" class="text-white">+13462191008</a>
             </div>
           </div>
         </div>
@@ -336,15 +337,16 @@
           <div class="col-md-6 text-start">
             <div class="address">
               <i class="fas fa-map-marker-alt"></i>
-              <p>123 Health Street, Wellness City, USA</p>
+              <p>3007 Stephen Howard court,
+                Missouri city TX 77459</p>
             </div>
           </div>
           <div class="col-md-6 text-md-end text-center">
             <div class="social-icons">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://www.facebook.com/share/1A7nFQeMjf/"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://Wa.me/13462191008"><i class='bx bxl-whatsapp'></i></a>
+              <a href="https://www.instagram.com/wealthy_living_healthcare?igsh=dnJobXlpam1iZWMz"><i class="fab fa-instagram"></i></a>
+              <a href="http://tiktok.com/@wealthyliving.hea"><i class='bx bxl-tiktok' ></i></a>
             </div>
           </div>
         </div>
