--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="/assets/vendor/bootstrap/font-awesome-4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="/assets/css/dashboard.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.11.0/main.min.css"
