favicons and meta script files added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       rel="stylesheet"
       href="/assets/vendor/bootstrap/css/bootstrap.min.css"
     />
+    <link rel="icon" type="image/png" href="/assets/images/new-logo.png">
+
     <link
       rel="stylesheet"
       href="/assets/vendor/bootstrap/font-awesome-4.7.0/css/font-awesome.min.css"
@@ -663,5 +665,12 @@
         once: true,
       });
     </script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+          document.title = "Wealthy Living - Premium Healthcare services with expert care. Book an appointment today!"; // Ensure correct title
+          document.body.setAttribute("title", "Premium Healthcare services with expert care. Book an appointment today!");
+      });
+  </script>
+  
   </body>
 </html>
