--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -7,6 +7,7 @@
       content="Explore the latest insights in healthcare, wellness, and medical advancements."
     />
     <title>WEALTHY LIVING | BLOGS</title>
+    <link rel="icon" type="image/png" href="/assets/images/new-logo.png">
     <link
       rel="stylesheet"
       href="/assets/vendor/bootstrap/css/bootstrap.min.css"
@@ -360,6 +361,12 @@
       AOS.init({
         once: true,
       });
+    </script>
+      <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            document.title = "Wealthy Living Blogs - Premium Healthcare services with expert care. Book an appointment today!"; // Ensure correct title
+            document.body.setAttribute("title", "Premium Healthcare services with expert care. Book an appointment today!");
+        });
     </script>
   </body>
 </html>
