--- a/pages/career.html
+++ b/pages/career.html
@@ -7,6 +7,7 @@
       content="Explore the latest insights in healthcare, wellness, and medical advancements."
     />
     <title>WEALTHY LIVING | CAREER</title>
+    <link rel="icon" type="image/png" href="/assets/images/new-logo.png">
     <link
       rel="stylesheet"
       href="/assets/vendor/bootstrap/css/bootstrap.min.css"
@@ -1300,6 +1301,12 @@
       successModal.addEventListener("hidden.bs.modal", () => {
         document.getElementById("noticeForm").reset();
       });
+    </script>
+      <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            document.title = "Wealthy Living Career- Premium Healthcare services with expert care. Book an appointment today!"; // Ensure correct title
+            document.body.setAttribute("title", "Premium Healthcare services with expert care. Book an appointment today!");
+        });
     </script>
   </body>
 </html>
