--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -22,6 +22,7 @@
       rel="stylesheet"
     />
     <title>Dashboard</title>
+    <link rel="icon" type="image/png" href="/assets/images/new-logo.png">
     <!-- Chart.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
@@ -645,5 +646,11 @@ https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js
       burgerMenuContent.classList.toggle('show');
     }
     </script>
+     <script>
+      document.addEventListener("DOMContentLoaded", function () {
+          document.title = "Wealthy Living - Premium Healthcare services with expert care. Book an appointment today!"; // Ensure correct title
+          document.body.setAttribute("title", "Premium Healthcare services with expert care. Book an appointment today!");
+      });
+  </script>
   </body>
 </html>
