--- a/pages/services.html
+++ b/pages/services.html
@@ -7,6 +7,7 @@
       content="Explore our top-tier healthcare services designed to provide you with expert care and personalized treatment."
     />
     <title>WEALTHY LIVING | SERVICES</title>
+    <link rel="icon" type="image/png" href="/assets/images/new-logo.png">
     <link
       rel="stylesheet"
       href="/assets/vendor/bootstrap/css/bootstrap.min.css"
@@ -482,5 +483,11 @@
         once: true,
       });
     </script>
+     <script>
+      document.addEventListener("DOMContentLoaded", function () {
+          document.title = "Wealthy Living Service - Premium Healthcare services with expert care. Book an appointment today!"; // Ensure correct title
+          document.body.setAttribute("title", "Premium Healthcare services with expert care. Book an appointment today!");
+      });
+  </script>
   </body>
 </html>
