--- a/pages/settings.html
+++ b/pages/settings.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/assets/css/dashboard.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.11.0/main.min.css" />
   <title>Settings</title>
+  <link rel="icon" type="image/png" href="/assets/images/new-logo.png">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -62,6 +63,12 @@
         // You can implement your own exit functionality here
         window.location.href = '/pages/dashboard.html'; // Example redirect to a dashboard page
     }
+</script>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        document.title = "Wealthy Living - Premium Healthcare services with expert care. Book an appointment today!"; // Ensure correct title
+        document.body.setAttribute("title", "Premium Healthcare services with expert care. Book an appointment today!");
+    });
 </script>
 </body>
 </html>
