--- a/pages/blogdashboard.html
+++ b/pages/blogdashboard.html
@@ -17,6 +17,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.11.0/main.min.css"
     />
     <title>Blogs Dashboard</title>
+    <link rel="icon" type="image/png" href="/assets/images/new-logo.png">
     <!-- Chart.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
@@ -367,5 +368,11 @@
     
 
     </script>
+     <script>
+      document.addEventListener("DOMContentLoaded", function () {
+          document.title = "Wealthy Living - Premium Healthcare services with expert care. Book an appointment today!"; // Ensure correct title
+          document.body.setAttribute("title", "Premium Healthcare services with expert care. Book an appointment today!");
+      });
+  </script>
   </body>
 </html>
