--- a/pages/login.html
+++ b/pages/login.html
@@ -7,6 +7,7 @@
       content="Explore the latest insights in healthcare, wellness, and medical advancements."
     />
     <title>WEALTHY LIVING | LOG IN</title>
+    <link rel="icon" type="image/png" href="/assets/images/new-logo.png">
     <link
       rel="stylesheet"
       href="/assets/vendor/bootstrap/css/bootstrap.min.css"
@@ -120,6 +121,12 @@
         once: true,
       });
     </script>
+     <script>
+      document.addEventListener("DOMContentLoaded", function () {
+          document.title = "Wealthy Living Login - Premium Healthcare services with expert care. Book an appointment today!"; // Ensure correct title
+          document.body.setAttribute("title", "Premium Healthcare services with expert care. Book an appointment today!");
+      });
+  </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
