--- a/pages/readblogs.html
+++ b/pages/readblogs.html
@@ -7,6 +7,7 @@
       content="Explore the latest insights in healthcare, wellness, and medical advancements."
     />
     <title>WEALTHY LIVING | READ BLOGS</title>
+    <link rel="icon" type="image/png" href="/assets/images/new-logo.png">
     <link
       rel="stylesheet"
       href="/assets/vendor/bootstrap/css/bootstrap.min.css"
