logo linked to home page

--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -40,10 +40,11 @@
     <!-- Navbar Section -->
     <header class="fixed-top">
       <div class="logo">
-        <img
+        <a href="/index.html">  <img
           src="/assets/images/new-logo.png"
           alt="wealthy living Logo"
-        />
+        /></a>
+      
       </div>
       <ul class="navlist">
         <li>
@@ -296,11 +297,12 @@
         <!-- Logo -->
         <div class="row">
           <div class="col-12">
-            <img
+            <a href="/index.html">   <img
               src="/assets/images/new-logo.png"
               alt="Wealth Living Healthcare"
               class="footer-logo"
-            />
+            /></a>
+         
           </div>
         </div>
 
