--- a/pages/career.html
+++ b/pages/career.html
@@ -7,7 +7,7 @@
       content="Explore the latest insights in healthcare, wellness, and medical advancements."
     />
     <title>WEALTHY LIVING | CAREER</title>
-    <link rel="icon" type="image/png" href="/assets/images/new-logo.png">
+    <link rel="icon" type="image/png" href="/assets/images/new-logo.png" />
     <link
       rel="stylesheet"
       href="/assets/vendor/bootstrap/css/bootstrap.min.css"
@@ -40,7 +40,9 @@
     <!-- Navbar Section -->
     <header class="fixed-top">
       <div class="logo">
-        <img src="/assets/images/new-logo.png" alt="wealthy living Logo" />
+        <a href="/index.html">
+          <img src="/assets/images/new-logo.png" alt="wealthy living Logo"
+        /></a>
       </div>
       <ul class="navlist">
         <li>
@@ -913,10 +915,14 @@
     </div>
 
     <!-- Traffic Section -->
-    <section id="traffic-section" class="traffic-section py-5" data-aos="fade-up"
-    data-aos-easing="ease-in-sine"
-    data-aos-anchor-placement="top-bottom"
-    data-aos-duration="1000">
+    <section
+      id="traffic-section"
+      class="traffic-section py-5"
+      data-aos="fade-up"
+      data-aos-easing="ease-in-sine"
+      data-aos-anchor-placement="top-bottom"
+      data-aos-duration="1000"
+    >
       <div class="container">
         <h4 class="section-heading text-center">TRAFFIC VIOLATIONS RECORD</h4>
         <p class="text-start">
@@ -1012,7 +1018,10 @@
 
           <!-- Text Area -->
           <div class="mb-3">
-            <label class="mb-3">If you have been driving while intoxication or under the influence, please explain:</label>
+            <label class="mb-3"
+              >If you have been driving while intoxication or under the
+              influence, please explain:</label
+            >
             <textarea
               class="form-control"
               rows="4"
@@ -1022,8 +1031,9 @@
 
           <p class="">
             <small
-              >NOTE: If you are hired for a position that requires driving, you must keep us 
-              informed of Any changes in your driving record.</small
+              >NOTE: If you are hired for a position that requires driving, you
+              must keep us informed of Any changes in your driving
+              record.</small
             >
           </p>
         </form>
@@ -1220,11 +1230,12 @@
         <!-- Logo -->
         <div class="row">
           <div class="col-12">
-            <img
-              src="/assets/images/new-logo.png"
-              alt="Wealth Living Healthcare"
-              class="footer-logo"
-            />
+            <a href="/index.html">
+              <img
+                src="/assets/images/new-logo.png"
+                alt="Wealth Living Healthcare"
+                class="footer-logo"
+            /></a>
           </div>
         </div>
 
@@ -1302,11 +1313,15 @@
         document.getElementById("noticeForm").reset();
       });
     </script>
-      <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            document.title = "Wealthy Living Career- Premium Healthcare services with expert care. Book an appointment today!"; // Ensure correct title
-            document.body.setAttribute("title", "Premium Healthcare services with expert care. Book an appointment today!");
-        });
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        document.title =
+          "Wealthy Living Career- Premium Healthcare services with expert care. Book an appointment today!"; // Ensure correct title
+        document.body.setAttribute(
+          "title",
+          "Premium Healthcare services with expert care. Book an appointment today!"
+        );
+      });
     </script>
   </body>
 </html>
