--- a/pages/services.html
+++ b/pages/services.html
@@ -7,7 +7,7 @@
       content="Explore our top-tier healthcare services designed to provide you with expert care and personalized treatment."
     />
     <title>WEALTHY LIVING | SERVICES</title>
-    <link rel="icon" type="image/png" href="/assets/images/new-logo.png">
+    <link rel="icon" type="image/png" href="/assets/images/new-logo.png" />
     <link
       rel="stylesheet"
       href="/assets/vendor/bootstrap/css/bootstrap.min.css"
@@ -40,10 +40,9 @@
     <!-- Navbar Section -->
     <header class="fixed-top">
       <div class="logo">
-        <img
-          src="/assets/images/new-logo.png"
-          alt="wealthy living Logo"
-        />
+        <a href="/index.html">
+          <img src="/assets/images/new-logo.png" alt="wealthy living Logo"
+        /></a>
       </div>
       <ul class="navlist">
         <li>
@@ -89,9 +88,13 @@
     </header>
 
     <!-- Service Home Section -->
-    <section class="service-home" data-aos="fade-down"
-    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-    data-aos-duration="1000">
+    <section
+      class="service-home"
+      data-aos="fade-down"
+      data-aos-easing="ease-in-sine"
+      data-aos-anchor-placement="top-bottom"
+      data-aos-duration="1000"
+    >
       <div class="overlay"></div>
       <div class="container text-center">
         <h1 class="service-title">Our Healthcare Services</h1>
@@ -110,9 +113,13 @@
 
         <!-- First Row: Image Left, Text Right -->
         <div class="row align-items-center mb-3">
-          <div class="col-lg-7 mt-3" data-aos="fade-down"
-          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-          data-aos-duration="1000">
+          <div
+            class="col-lg-7 mt-3"
+            data-aos="fade-down"
+            data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1000"
+          >
             <h3 class="about">About Us</h3>
             <p class="">
               At Wealthy Living, your health and well-being are our top
@@ -132,9 +139,13 @@
               you every step of the way.
             </p>
           </div>
-          <div class="col-lg-5" data-aos="zoom-in-down"
-          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-          data-aos-duration="1000">
+          <div
+            class="col-lg-5"
+            data-aos="zoom-in-down"
+            data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1000"
+          >
             <img
               src="/assets/images/service-know.png"
               alt="About Us Image"
@@ -149,9 +160,13 @@
     <section class="our-services-section py-3">
       <div class="container">
         <!-- Section Title Row -->
-        <div class="row align-items-center section-header" data-aos="fade-down"
-        data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-        data-aos-duration="1000">
+        <div
+          class="row align-items-center section-header"
+          data-aos="fade-down"
+          data-aos-easing="ease-in-sine"
+          data-aos-anchor-placement="top-bottom"
+          data-aos-duration="1000"
+        >
           <div class="col-lg-4 d-flex align-items-center">
             <div class="line"></div>
             <i class="fas fa-arrow-right"></i>
@@ -166,9 +181,13 @@
         <!-- Services Grid -->
         <div class="row g-4 my-4">
           <!-- Service Item 1 -->
-          <div class="col-md-6" data-aos="fade-down"
-          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-          data-aos-duration="1000">
+          <div
+            class="col-md-6"
+            data-aos="fade-down"
+            data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1000"
+          >
             <div class="service-item position-relative">
               <img
                 src="/assets/images/service1.png"
@@ -178,16 +197,22 @@
               <div class="service-card">
                 <h3>Pediatrics Nursing</h3>
                 <p>
-                  Our Pediatric Nursing Services are committed to delivering compassionate, top-quality care customized to address the unique needs of children from infancy to adolescence.
+                  Our Pediatric Nursing Services are committed to delivering
+                  compassionate, top-quality care customized to address the
+                  unique needs of children from infancy to adolescence.
                 </p>
               </div>
             </div>
           </div>
 
           <!-- Service Item 2 -->
-          <div class="col-md-6" data-aos="fade-down"
-          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-          data-aos-duration="1000">
+          <div
+            class="col-md-6"
+            data-aos="fade-down"
+            data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1000"
+          >
             <div class="service-item position-relative">
               <img
                 src="/assets/images/service2.png"
@@ -197,16 +222,23 @@
               <div class="service-card">
                 <h3>Hospice Care</h3>
                 <p>
-                  We offer compassionate hospice care focused on ensuring comfort, preserving dignity, and enhancing quality of life for patients and their families during life’s most difficult times.
+                  We offer compassionate hospice care focused on ensuring
+                  comfort, preserving dignity, and enhancing quality of life for
+                  patients and their families during life’s most difficult
+                  times.
                 </p>
               </div>
             </div>
           </div>
 
           <!-- Service Item 3 -->
-          <div class="col-md-6" data-aos="fade-down"
-          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-          data-aos-duration="1000">
+          <div
+            class="col-md-6"
+            data-aos="fade-down"
+            data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1000"
+          >
             <div class="service-item position-relative">
               <img
                 src="/assets/images/service3.png"
@@ -216,16 +248,23 @@
               <div class="service-card">
                 <h3>IV Infusion Therapy</h3>
                 <p>
-                  we provide expert IV infusion therapy to deliver essential nutrients, medications, and hydration directly into the bloodstream. This effective treatment method is designed to support your health and recovery with precision and care.
+                  we provide expert IV infusion therapy to deliver essential
+                  nutrients, medications, and hydration directly into the
+                  bloodstream. This effective treatment method is designed to
+                  support your health and recovery with precision and care.
                 </p>
               </div>
             </div>
           </div>
 
           <!-- Service Item 4 -->
-          <div class="col-md-6" data-aos="fade-down"
-          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-          data-aos-duration="1000">
+          <div
+            class="col-md-6"
+            data-aos="fade-down"
+            data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1000"
+          >
             <div class="service-item position-relative">
               <img
                 src="/assets/images/service4.png"
@@ -233,19 +272,25 @@
                 class="img-fluid service-img"
               />
               <div class="service-card">
-                <h3>Home Health Aides/
-                  Provider Service</h3>
+                <h3>Home Health Aides/ Provider Service</h3>
                 <p>
-                  Our Home Health Aide services offer compassionate and personalized support to individuals, helping them with daily living activities while ensuring they remain comfortable in their own homes.
+                  Our Home Health Aide services offer compassionate and
+                  personalized support to individuals, helping them with daily
+                  living activities while ensuring they remain comfortable in
+                  their own homes.
                 </p>
               </div>
             </div>
           </div>
 
           <!-- Service Item 5 -->
-          <div class="col-md-6" data-aos="fade-down"
-          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-          data-aos-duration="1000">
+          <div
+            class="col-md-6"
+            data-aos="fade-down"
+            data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1000"
+          >
             <div class="service-item position-relative">
               <img
                 src="/assets/images/service5.png"
@@ -255,16 +300,22 @@
               <div class="service-card">
                 <h3>Medical Social Workers</h3>
                 <p>
-                  We provide compassionate and expert medical social work services,  addressing the emotional, social, and environmental needs of our  clients.
+                  We provide compassionate and expert medical social work
+                  services, addressing the emotional, social, and environmental
+                  needs of our clients.
                 </p>
               </div>
             </div>
           </div>
 
           <!-- Service Item 6 -->
-          <div class="col-md-6" data-aos="fade-down"
-          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-          data-aos-duration="1000">
+          <div
+            class="col-md-6"
+            data-aos="fade-down"
+            data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1000"
+          >
             <div class="service-item position-relative">
               <img
                 src="/assets/images/service6.png"
@@ -272,10 +323,11 @@
                 class="img-fluid service-img"
               />
               <div class="service-card">
-                <h3>Home Rehabilitation 
-                  Services</h3>
+                <h3>Home Rehabilitation Services</h3>
                 <p>
-                  We provide comprehensive home rehabilitation services, delivering  personalized care and therapy in the comfort of our clients' homes.
+                  We provide comprehensive home rehabilitation services,
+                  delivering personalized care and therapy in the comfort of our
+                  clients' homes.
                 </p>
               </div>
             </div>
@@ -285,9 +337,13 @@
     </section>
 
     <!-- Empower Section------ -->
-    <section class="empower-section d-flex align-items-center mb-3" data-aos="fade-up"
-          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-          data-aos-duration="1000">
+    <section
+      class="empower-section d-flex align-items-center mb-3"
+      data-aos="fade-up"
+      data-aos-easing="ease-in-sine"
+      data-aos-anchor-placement="top-bottom"
+      data-aos-duration="1000"
+    >
       <div class="container">
         <div class="row">
           <div class="col-md-8">
@@ -300,23 +356,29 @@
         </div>
       </div>
     </section>
-
     <!-- Testimonials Section---- -->
     <section class="testimonials-section p-3">
       <div class="container">
         <!-- Section Title -->
-        <div class="text-center mb-5" data-aos="fade-down"
-        data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-        data-aos-duration="1000">
+        <div
+          class="text-center mb-5"
+          data-aos="fade-down"
+          data-aos-easing="ease-in-sine"
+          data-aos-duration="1000"
+        >
           <h2 class="">Testimonials</h2>
           <h4 class="section-subtitle">What Our Clients Say About Us</h4>
         </div>
 
         <!-- Testimonials Grid -->
         <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-12" data-aos="flip-right"
-          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-          data-aos-duration="1000">
+          <div
+            class="col-lg-6 col-md-6 col-sm-12"
+            data-aos="flip-right"
+            data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1000"
+          >
             <div class="testimonial-item">
               <div class="stars">★★★★★</div>
               <p class="testimonial-text">
@@ -330,16 +392,20 @@
                   class="profile-img"
                 />
                 <div>
-                  <h5>John Doe</h5>
+                  <h5>Maritza Helen</h5>
                   <p>General Checkup</p>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-6 col-md-6 col-sm-12" data-aos="flip-right"
-          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-          data-aos-duration="1500">
+          <div
+            class="col-lg-6 col-md-6 col-sm-12"
+            data-aos="flip-right"
+            data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1500"
+          >
             <div class="testimonial-item">
               <div class="stars">★★★★★</div>
               <p class="testimonial-text">
@@ -353,16 +419,20 @@
                   class="profile-img"
                 />
                 <div>
-                  <h5>Jane Smith</h5>
+                  <h5>Dwight Bowers</h5>
                   <p>Dental Care</p>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-6 col-md-6 col-sm-12" data-aos="flip-right"
-          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-          data-aos-duration="1000">
+          <div
+            class="col-lg-6 col-md-6 col-sm-12"
+            data-aos="flip-right"
+            data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1000"
+          >
             <div class="testimonial-item">
               <div class="stars">★★★★★</div>
               <p class="testimonial-text">
@@ -376,16 +446,20 @@
                   class="profile-img"
                 />
                 <div>
-                  <h5>Michael Lee</h5>
+                  <h5>Sarah Johnson</h5>
                   <p>Emergency Care</p>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-6 col-md-6 col-sm-12" data-aos="flip-right"
-          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-          data-aos-duration="1500">
+          <div
+            class="col-lg-6 col-md-6 col-sm-12"
+            data-aos="flip-right"
+            data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1500"
+          >
             <div class="testimonial-item">
               <div class="stars">★★★★★</div>
               <p class="testimonial-text">
@@ -398,7 +472,7 @@
                   class="profile-img"
                 />
                 <div>
-                  <h5>Sarah Johnson</h5>
+                  <h5>Kevin woods</h5>
                   <p>Pediatrics</p>
                 </div>
               </div>
@@ -408,20 +482,24 @@
       </div>
     </section>
 
-    
     <!-- Footer Section---- -->
-    <footer class="footer-section" data-aos="fade-down"
-    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-    data-aos-duration="1000">
+    <footer
+      class="footer-section"
+      data-aos="fade-down"
+      data-aos-easing="ease-in-sine"
+      data-aos-anchor-placement="top-bottom"
+      data-aos-duration="1000"
+    >
       <div class="container">
         <!-- Logo -->
         <div class="row">
           <div class="col-12">
-            <img
-              src="/assets/images/new-logo.png"
-              alt="Wealth Living Healthcare"
-              class="footer-logo"
-            />
+            <a href="/index.html">
+              <img
+                src="/assets/images/new-logo.png"
+                alt="Wealth Living Healthcare"
+                class="footer-logo"
+            /></a>
           </div>
         </div>
 
@@ -459,16 +537,24 @@
           <div class="col-md-6 text-start">
             <div class="address">
               <i class="fas fa-map-marker-alt"></i>
-              <p>3007 Stephen Howard court,
-                Missouri city TX 77459</p>
+              <p>3007 Stephen Howard court, Missouri city TX 77459</p>
             </div>
           </div>
           <div class="col-md-6 text-md-end text-center">
             <div class="social-icons">
-              <a href="https://www.facebook.com/share/1A7nFQeMjf/"><i class="fab fa-facebook-f"></i></a>
-              <a href="https://Wa.me/13462191008"><i class='bx bxl-whatsapp'></i></a>
-              <a href="https://www.instagram.com/wealthy_living_healthcare?igsh=dnJobXlpam1iZWMz"><i class="fab fa-instagram"></i></a>
-              <a href="http://tiktok.com/@wealthyliving.hea"><i class='bx bxl-tiktok' ></i></a>
+              <a href="https://www.facebook.com/share/1A7nFQeMjf/"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+              <a href="https://Wa.me/13462191008"
+                ><i class="bx bxl-whatsapp"></i
+              ></a>
+              <a
+                href="https://www.instagram.com/wealthy_living_healthcare?igsh=dnJobXlpam1iZWMz"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a href="http://tiktok.com/@wealthyliving.hea"
+                ><i class="bx bxl-tiktok"></i
+              ></a>
             </div>
           </div>
         </div>
@@ -483,11 +569,15 @@
         once: true,
       });
     </script>
-     <script>
+    <script>
       document.addEventListener("DOMContentLoaded", function () {
-          document.title = "Wealthy Living Service - Premium Healthcare services with expert care. Book an appointment today!"; // Ensure correct title
-          document.body.setAttribute("title", "Premium Healthcare services with expert care. Book an appointment today!");
+        document.title =
+          "Wealthy Living Service - Premium Healthcare services with expert care. Book an appointment today!"; // Ensure correct title
+        document.body.setAttribute(
+          "title",
+          "Premium Healthcare services with expert care. Book an appointment today!"
+        );
       });
-  </script>
+    </script>
   </body>
 </html>
