--- a/pages/account.html
+++ b/pages/account.html
@@ -7,7 +7,7 @@
       content="Explore the latest insights in healthcare, wellness, and medical advancements."
     />
     <title>WEALTHY LIVING | ACCOUNT</title>
-    <link rel="icon" type="image/png" href="/assets/images/new-logo.png">
+    <link rel="icon" type="image/png" href="/assets/images/new-logo.png" />
     <link
       rel="stylesheet"
       href="/assets/vendor/bootstrap/css/bootstrap.min.css"
@@ -49,11 +49,13 @@
           <div class="login-form w-100">
             <!-- Logo -->
             <div class="text-center mb-3">
-              <img
-                src="/assets/images/new-logo.png"
-                alt="Company Logo"
-                class="img-fluid" width=""
-              />
+              <a href="/index.html">
+                <img
+                  src="/assets/images/new-logo.png"
+                  alt="Company Logo"
+                  class="img-fluid"
+                  width=""
+              /></a>
             </div>
 
             <!-- Welcome Heading -->
@@ -120,13 +122,18 @@
       AOS.init({
         once: true,
       });
-    </script>\
-     <script>
+    </script>
+    \
+    <script>
       document.addEventListener("DOMContentLoaded", function () {
-          document.title = "Wealthy Living - Premium Healthcare services with expert care. Book an appointment today!"; // Ensure correct title
-          document.body.setAttribute("title", "Premium Healthcare services with expert care. Book an appointment today!");
+        document.title =
+          "Wealthy Living - Premium Healthcare services with expert care. Book an appointment today!"; // Ensure correct title
+        document.body.setAttribute(
+          "title",
+          "Premium Healthcare services with expert care. Book an appointment today!"
+        );
       });
-  </script>
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
