--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,7 @@
       content="Explore the latest insights in healthcare, wellness, and medical advancements."
     />
     <title>WEALTHY LIVING | CONTACT</title>
-    <link rel="icon" type="image/png" href="/assets/images/new-logo.png">
+    <link rel="icon" type="image/png" href="/assets/images/new-logo.png" />
     <link
       rel="stylesheet"
       href="/assets/vendor/bootstrap/css/bootstrap.min.css"
@@ -40,10 +40,9 @@
     <!-- Navbar Section -->
     <header class="fixed-top">
       <div class="logo">
-        <img
-          src="/assets/images/new-logo.png"
-          alt="wealthy living Logo"
-        />
+        <a href="/index.html">
+          <img src="/assets/images/new-logo.png" alt="wealthy living Logo"
+        /></a>
       </div>
       <ul class="navlist">
         <li>
@@ -89,9 +88,13 @@
     </header>
 
     <!-- Service Home Section -->
-    <section class="contact-home" data-aos="fade-down"
-    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-    data-aos-duration="1000">
+    <section
+      class="contact-home"
+      data-aos="fade-down"
+      data-aos-easing="ease-in-sine"
+      data-aos-anchor-placement="top-bottom"
+      data-aos-duration="1000"
+    >
       <div class="overlay"></div>
       <div class="container text-center">
         <h1 class="service-title">Contact us</h1>
@@ -102,9 +105,13 @@
       <div class="container">
         <div class="row">
           <!-- Email Item -->
-          <div class="col-md-4 mb-3" data-aos="flip-right"
-          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-          data-aos-duration="1000">
+          <div
+            class="col-md-4 mb-3"
+            data-aos="flip-right"
+            data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1000"
+          >
             <div class="contact-items">
               <div class="icon mb-2">
                 <i class="fas fa-envelope fa-2x" style="color: #767676"></i>
@@ -112,15 +119,21 @@
               <div class="contact-content">
                 <p class="email mb-1 fw-bold">Email</p>
                 <p class="reach-out mb-1">Kindly Reach Out</p>
-                <a href="info@welihealthcare.comm" class="address">info@welihealthcare.com</a>
+                <a href="info@welihealthcare.comm" class="address"
+                  >info@welihealthcare.com</a
+                >
               </div>
             </div>
           </div>
 
           <!-- Location Item -->
-          <div class="col-md-4 mb-3" data-aos="flip-right"
-          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-          data-aos-duration="1300">
+          <div
+            class="col-md-4 mb-3"
+            data-aos="flip-right"
+            data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1300"
+          >
             <div class="contact-items">
               <div class="icon mb-2">
                 <i
@@ -135,9 +148,13 @@
           </div>
 
           <!-- Phone Item -->
-          <div class="col-md-4" data-aos="flip-right"
-          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-          data-aos-duration="1500">
+          <div
+            class="col-md-4"
+            data-aos="flip-right"
+            data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1500"
+          >
             <div class="contact-items">
               <div class="icon mb-2">
                 <i class="fas fa-phone-alt fa-2x" style="color: #767676"></i>
@@ -156,9 +173,13 @@
       <div class="container">
         <div class="row align-items-center">
           <!-- Left Column: Contact Form -->
-          <div class="col-md-6" data-aos="fade-up"
-          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-          data-aos-duration="1000">
+          <div
+            class="col-md-6"
+            data-aos="fade-up"
+            data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1000"
+          >
             <div class="contact-form">
               <!-- p5 Heading (Tagline) -->
               <p class="text-uppercase text-dark mb-1">Get Connected</p>
@@ -206,9 +227,13 @@
             </div>
           </div>
           <!-- Right Column: Image -->
-          <div class="col-md-6" data-aos="zoom-in-up"
-          data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-          data-aos-duration="1000">
+          <div
+            class="col-md-6"
+            data-aos="zoom-in-up"
+            data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1000"
+          >
             <img
               src="/assets/images/profile-img.jpg"
               alt="Contact Us Image"
@@ -254,20 +279,24 @@
       </div>
     </div>
 
-    
     <!-- Footer Section---- -->
-    <footer class="footer-section" data-aos="fade-down"
-    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-    data-aos-duration="1000">
+    <footer
+      class="footer-section"
+      data-aos="fade-down"
+      data-aos-easing="ease-in-sine"
+      data-aos-anchor-placement="top-bottom"
+      data-aos-duration="1000"
+    >
       <div class="container">
         <!-- Logo -->
         <div class="row">
           <div class="col-12">
-            <img
-              src="/assets/images/new-logo.png"
-              alt="Wealth Living Healthcare"
-              class="footer-logo"
-            />
+            <a href="/index.html">
+              <img
+                src="/assets/images/new-logo.png"
+                alt="Wealth Living Healthcare"
+                class="footer-logo"
+            /></a>
           </div>
         </div>
 
@@ -305,16 +334,24 @@
           <div class="col-md-6 text-start">
             <div class="address">
               <i class="fas fa-map-marker-alt"></i>
-              <p>3007 Stephen Howard court,
-                Missouri city TX 77459</p>
+              <p>3007 Stephen Howard court, Missouri city TX 77459</p>
             </div>
           </div>
           <div class="col-md-6 text-md-end text-center">
             <div class="social-icons">
-              <a href="https://www.facebook.com/share/1A7nFQeMjf/"><i class="fab fa-facebook-f"></i></a>
-              <a href="https://Wa.me/13462191008"><i class='bx bxl-whatsapp'></i></a>
-              <a href="https://www.instagram.com/wealthy_living_healthcare?igsh=dnJobXlpam1iZWMz"><i class="fab fa-instagram"></i></a>
-              <a href="http://tiktok.com/@wealthyliving.hea"><i class='bx bxl-tiktok' ></i></a>
+              <a href="https://www.facebook.com/share/1A7nFQeMjf/"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+              <a href="https://Wa.me/13462191008"
+                ><i class="bx bxl-whatsapp"></i
+              ></a>
+              <a
+                href="https://www.instagram.com/wealthy_living_healthcare?igsh=dnJobXlpam1iZWMz"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a href="http://tiktok.com/@wealthyliving.hea"
+                ><i class="bx bxl-tiktok"></i
+              ></a>
             </div>
           </div>
         </div>
@@ -332,9 +369,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
-          document.title = "Wealthy Living Contact - Premium Healthcare services with expert care. Book an appointment today!"; // Ensure correct title
-          document.body.setAttribute("title", "Premium Healthcare services with expert care. Book an appointment today!");
+        document.title =
+          "Wealthy Living Contact - Premium Healthcare services with expert care. Book an appointment today!"; // Ensure correct title
+        document.body.setAttribute(
+          "title",
+          "Premium Healthcare services with expert care. Book an appointment today!"
+        );
       });
-  </script>
+    </script>
   </body>
 </html>
