--- a/pages/readblogs.html
+++ b/pages/readblogs.html
@@ -7,7 +7,7 @@
       content="Explore the latest insights in healthcare, wellness, and medical advancements."
     />
     <title>WEALTHY LIVING | READ BLOGS</title>
-    <link rel="icon" type="image/png" href="/assets/images/new-logo.png">
+    <link rel="icon" type="image/png" href="/assets/images/new-logo.png" />
     <link
       rel="stylesheet"
       href="/assets/vendor/bootstrap/css/bootstrap.min.css"
@@ -47,87 +47,128 @@
 
     <!-- Blog Stories Section -->
     <section class="blog-stories py-5">
-        <div class="container">
-            <h2 class="text-start fw-bold mb-4">Appointment Booking Process, Step-by-Step Guide</h2>
-            <p class="stories-intro">Are you tired of the time-consuming and cumbersome process of scheduling appointments manually? Our appointment management SaaS platform is here to simplify the process for you. In this step-by-step guide, we'll walk you through how easy it is to streamline your appointment booking  process using our intuitive platform. </p>
+      <div class="container">
+        <h2 class="text-start fw-bold mb-4">
+          Appointment Booking Process, Step-by-Step Guide
+        </h2>
+        <p class="stories-intro">
+          Are you tired of the time-consuming and cumbersome process of
+          scheduling appointments manually? Our appointment management SaaS
+          platform is here to simplify the process for you. In this step-by-step
+          guide, we'll walk you through how easy it is to streamline your
+          appointment booking process using our intuitive platform.
+        </p>
 
-            <!-- Blog Stories Grid -->
-            <div class="row g-4">
-                <!-- Story Item 1 -->
-                <div class="col-md-6">
-                    <div class="story-item">
-                        <h3>Sign Up & Complete Your Account</h3>
-                        <p>Getting started with our appointment management SaaS platform is  quick and easy. Simply sign up for an account and customize your  settings to reflect your business preferences. This includes setting up  your availability, defining appointment durations, and configuring any  other specific requirements. 
-                        </p>
-                    </div>
-                </div>
-
-                <!-- Story Item 2 -->
-                <div class="col-md-6">
-                    <div class="story-item">
-                        <h3>Set Up Your Booking Page</h3>
-                        <p>Next, create your booking page, where clients can view your  availability and schedule appointments. Customize the design and layout  to match your brand identity, and add any relevant information, such as  service offerings, staff bios, and pricing.</p>
-                    </div>
-                </div>
-
-                <!-- Story Item 3 -->
-                <div class="col-md-6">
-                    <div class="story-item">
-                        <h3>Share Your Booking Page</h3>
-                        <p>Once your booking page is set up, it's time to share it with your  clients. You can easily share the link to your booking page via email,  social media, or your website. You can also embed the booking widget  directly onto your website for seamless integration.</p>
-                    </div>
-                </div>
-
-                <!-- Story Item 4 -->
-                <div class="col-md-6">
-                    <div class="story-item">
-                        <h3>Manage Your Appointments</h3>
-                        <p>As appointments start rolling in, use our platform to manage your  schedule efficiently. View upcoming appointments, make changes or  cancellations as needed, and send automated reminders to clients to  reduce no-shows.</p>
-                    </div>
-                </div>
-
-                <!-- Story Item 5 -->
-                <div class="col-md-6">
-                    <div class="story-item">
-                        <h3>Analyze Your Data and Optimize Your Process</h3>
-                        <p>Finally, take advantage of our reporting and analytics features to  gain insights into your appointment data. Track booking trends, identify peak times, and analyze staff performance to optimize your scheduling  process for maximum efficiency and profitability.</p>
-                    </div>
-                </div>
-
-                <!-- Story Item 6 -->
-                <div class="col-md-6">
-                    <div class="story-item">
-                        
-                        <p>By prioritizing these features when evaluating appointment management SaaS solutions, you can ensure that you choose a platform that meets your business needs and helps you achieve your goals.</p>
-                    </div>
-                </div>
-
-                             
+        <!-- Blog Stories Grid -->
+        <div class="row g-4">
+          <!-- Story Item 1 -->
+          <div class="col-md-6">
+            <div class="story-item">
+              <h3>Sign Up & Complete Your Account</h3>
+              <p>
+                Getting started with our appointment management SaaS platform is
+                quick and easy. Simply sign up for an account and customize your
+                settings to reflect your business preferences. This includes
+                setting up your availability, defining appointment durations,
+                and configuring any other specific requirements.
+              </p>
             </div>
+          </div>
+
+          <!-- Story Item 2 -->
+          <div class="col-md-6">
+            <div class="story-item">
+              <h3>Set Up Your Booking Page</h3>
+              <p>
+                Next, create your booking page, where clients can view your
+                availability and schedule appointments. Customize the design and
+                layout to match your brand identity, and add any relevant
+                information, such as service offerings, staff bios, and pricing.
+              </p>
+            </div>
+          </div>
+
+          <!-- Story Item 3 -->
+          <div class="col-md-6">
+            <div class="story-item">
+              <h3>Share Your Booking Page</h3>
+              <p>
+                Once your booking page is set up, it's time to share it with
+                your clients. You can easily share the link to your booking page
+                via email, social media, or your website. You can also embed the
+                booking widget directly onto your website for seamless
+                integration.
+              </p>
+            </div>
+          </div>
+
+          <!-- Story Item 4 -->
+          <div class="col-md-6">
+            <div class="story-item">
+              <h3>Manage Your Appointments</h3>
+              <p>
+                As appointments start rolling in, use our platform to manage
+                your schedule efficiently. View upcoming appointments, make
+                changes or cancellations as needed, and send automated reminders
+                to clients to reduce no-shows.
+              </p>
+            </div>
+          </div>
+
+          <!-- Story Item 5 -->
+          <div class="col-md-6">
+            <div class="story-item">
+              <h3>Analyze Your Data and Optimize Your Process</h3>
+              <p>
+                Finally, take advantage of our reporting and analytics features
+                to gain insights into your appointment data. Track booking
+                trends, identify peak times, and analyze staff performance to
+                optimize your scheduling process for maximum efficiency and
+                profitability.
+              </p>
+            </div>
+          </div>
+
+          <!-- Story Item 6 -->
+          <div class="col-md-6">
+            <div class="story-item">
+              <p>
+                By prioritizing these features when evaluating appointment
+                management SaaS solutions, you can ensure that you choose a
+                platform that meets your business needs and helps you achieve
+                your goals.
+              </p>
+            </div>
+          </div>
         </div>
+      </div>
     </section>
 
-      <!-- Back Button -->
-      <div class="container mb-4">
-        <a href="/pages/blogs.html" class="back-link">
-            <i class="fas fa-arrow-left"></i> Back to Blog
-        </a>
+    <!-- Back Button -->
+    <div class="container mb-4">
+      <a href="/pages/blogs.html" class="back-link">
+        <i class="fas fa-arrow-left"></i> Back to Blog
+      </a>
     </div>
-   
 
     <!-- Footer Section---- -->
-    <footer class="footer-section" data-aos="fade-down"
-    data-aos-easing="ease-in-sine" data-aos-anchor-placement="top-bottom"
-    data-aos-duration="1000">
+    <footer
+      class="footer-section"
+      data-aos="fade-down"
+      data-aos-easing="ease-in-sine"
+      data-aos-anchor-placement="top-bottom"
+      data-aos-duration="1000"
+    >
       <div class="container">
         <!-- Logo -->
         <div class="row">
           <div class="col-12">
-            <img
-              src="/assets/images/new-logo.png"
-              alt="Wealth Living Healthcare"
-              class="footer-logo"
-            />
+            <a href="/index.html">
+              <img
+                src="/assets/images/new-logo.png"
+                alt="Wealth Living Healthcare"
+                class="footer-logo"
+            /></a>
           </div>
         </div>
 
@@ -165,16 +206,24 @@
           <div class="col-md-6 text-start">
             <div class="address">
               <i class="fas fa-map-marker-alt"></i>
-              <p>3007 Stephen Howard court,
-                Missouri city TX 77459</p>
+              <p>3007 Stephen Howard court, Missouri city TX 77459</p>
             </div>
           </div>
           <div class="col-md-6 text-md-end text-center">
             <div class="social-icons">
-              <a href="https://www.facebook.com/share/1A7nFQeMjf/"><i class="fab fa-facebook-f"></i></a>
-              <a href="https://Wa.me/13462191008"><i class='bx bxl-whatsapp'></i></a>
-              <a href="https://www.instagram.com/wealthy_living_healthcare?igsh=dnJobXlpam1iZWMz"><i class="fab fa-instagram"></i></a>
-              <a href="http://tiktok.com/@wealthyliving.hea"><i class='bx bxl-tiktok' ></i></a>
+              <a href="https://www.facebook.com/share/1A7nFQeMjf/"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+              <a href="https://Wa.me/13462191008"
+                ><i class="bx bxl-whatsapp"></i
+              ></a>
+              <a
+                href="https://www.instagram.com/wealthy_living_healthcare?igsh=dnJobXlpam1iZWMz"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a href="http://tiktok.com/@wealthyliving.hea"
+                ><i class="bx bxl-tiktok"></i
+              ></a>
             </div>
           </div>
         </div>
