--- a/index.html
+++ b/index.html
@@ -717,24 +717,23 @@
           </div>
         </div>
 
-        <!-- Second Section: Email & Phone -->
-        <div class="row contact-info">
-          <div class="col-md-12 mb-3">
-            <div class="contact-item">
-              <i class="fas fa-envelope"></i>
-              <a href="info@welihealthcare.comm" class="text-white"
-                >info@welihealthcare.com</a
-              >
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="contact-item">
-              <i class="fas fa-phone-alt"></i>
-              <a href="+13462191008" class="text-white">+13462191008</a>
-            </div>
-          </div>
-        </div>
-
+       <!-- Second Section: Email & Phone -->
+<div class="row contact-info">
+  <div class="col-md-12 mb-3">
+    <div class="contact-item">
+      <i class="fas fa-envelope"></i>
+      <a href="mailto:info@welihealthcare.com" class="text-white">
+        info@welihealthcare.com
+      </a>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="contact-item">
+      <i class="fas fa-phone-alt"></i>
+      <a href="tel:+13462191008" class="text-white">+13462191008</a>
+    </div>
+  </div>
+</div>
         <!-- Third Section: Address & Social Media -->
         <div class="row">
           <div class="col-md-6 text-start">
